<resources>
    <string name="app_name">Glaswerk</string>
    <string name="title_damage">Schade</string>
    <string name="title_orders">Bestellingen</string>
    <string name="title_stock">Voorraad</string>
    <string name="title_students">Leerlingen</string>
    <string name="title_settings">Instellingen</string>
    <string name="title_select_student">Selecteer leerling</string>
    <string name="welcome">Welkom</string>
    <string name="invalid_username">Ongeldige gebruikersnaam</string>
    <string name="email">Email</string>
    <string name="password">Wachtwoord</string>
    <string name="sign_in">Log in</string>
    <string name="profile_picture">Profielfoto</string>
    <string name="edit_password">Wachtwoord wijzigen</string>
    <string name="logout">Uitloggen</string>
    <string name="amount">Aantal:</string>
    <string name="order_amount">Bestellen:</string>
    <string name="Room">Lokaal:</string>
    <string name="Class">Klas:</string>
    <string name="NumberOfBroken">Aantal gebroken:</string>
    <string name="loading">Laden...</string>
    <string name="somethingWentWrong">Er is iets mis gegaan.</string>
    <string name="errorDescription">error</string>
    <string name="minAmount">Min:</string>
    <string name="maxAmount">Max:</string>
    <string name="userPicture">gebruiker foto</string>
    <string name="onPurpose">Opzettelijk</string>
    <string name="notOnPurpose">Niet opzettelijk</string>
    <string name="cancel">Annuleer</string>
    <string name="orderAmount">Aantal besteld:</string>
    <string name="sharedPreferences">ClassRoom</string>
    <string name="AddItem">Voeg item toe:</string>
    <string name="Name">Naam</string>
    <string name="Amount">Aantal</string>
    <string name="Min_amount">Minimum aantal</string>
    <string name="Max_amount">Maximum aantal</string>
    <string name="Order_amount">Bestel hoeveelheid</string>
    <string name="Save">Opslaan</string>
    <string name="Remove">Verwijder</string>
    <string name="EditItem">Wijzig item:</string>
    <string name="Add">+ Voeg toe</string>
    <string name="Ad">Voeg toe</string>
    <string name="AddStudent">Voeg student toe:</string>
    <string name="EditStudent">Wijzig student:</string>
    <string name="Firstname">Voornaam</string>
    <string name="Lastname">Achternaam</string>
    <string name="Offline">Geen internetverbinding</string>
</resources>
