<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/DamageFragment"
        android:icon="@drawable/ic_damage_black_24dp"
        android:title="@string/title_damage" />

    <item
        android:id="@+id/OrdersFragment"
        android:icon="@drawable/ic_orders_black_24dp"
        android:title="@string/title_orders" />

    <item
        android:id="@+id/stockFragment"
        android:icon="@drawable/ic_stock_black_24dp"
        android:title="@string/title_stock" />

    <item
        android:id="@+id/studentsFragment"
        android:icon="@drawable/ic_students_black_24dp"
        android:title="@string/title_students" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>
