<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.bramgoedvriend.glaswerk.domain.Item" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:itemNameString="@{item}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Proefbuis" />

                <TextView
                    android:id="@+id/txtAantal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/amount"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
                    app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

                <TextView
                    android:id="@+id/txtAantalBestellen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/order_amount"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
                    app:layout_constraintEnd_toStartOf="@+id/constraintLayout" />

                <TextView
                    android:id="@+id/txtLokaal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/Room"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/item_name"
                    app:layout_constraintTop_toBottomOf="@+id/item_name" />

                <TextView
                    android:id="@+id/item_lokaal_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/txtLokaal"
                    app:layout_constraintTop_toTopOf="@+id/txtLokaal"
                    tools:text="1.012"
                    app:itemLokaalString="@{item}"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/item_aantal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        app:itemAantalOfTotalString="@{item}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="20 / 10" />

                    <TextView
                        android:id="@+id/item_aantal_bestellen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        app:itemOrderString="@{item}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/item_aantal"
                        tools:text="2 x 20" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>